syntax = "proto3";

package com.networking.node;

//Compile by executing mvn clean install
service NetworkService {
  rpc sendTheToken (ProtoToken) returns (Message) {};

  rpc greeting (ProtoNodeInfo) returns (Message) {};
}

message ProtoToken {
  repeated ProtoNodeInfo toAdd = 1;
  repeated ProtoNodeInfo toRemove = 2;
  ProtoNodeInfo from = 3;
  ProtoNodeInfo to = 4;
  repeated Measurement measurement = 5;
}

message ProtoNodeInfo {
  int32 id = 1;
  string ip = 2;
  int32 port = 3;
}

message Measurement {
  string id = 1;
  string type = 2;
  double value = 3;
  int64 timestamp = 4;
}

message Message {
  string message = 1;
}